--- a/happiness_report_analysis.ipynb
+++ b/happiness_report_analysis.ipynb
@@ -2456,7 +2456,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. What the proportion of the highest GPD are also unhappy?"
+    "### 4. What is the proportion of the highest GPD also unhappy?"
    ]
   },
   {
@@ -2720,7 +2720,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 5. What the proportion of the loewest GPD are also happy?"
+    "### 5.  What is the proportion of the lowest GPD also happy?"
    ]
   },
   {
