--- a/happiness_report_analysis.ipynb
+++ b/happiness_report_analysis.ipynb
@@ -3577,6 +3577,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Final Conclusion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We found that our data overall supported our hypothesis. For our first question, we measured the happiness levels of individual countries within our four largest regions, with two of the regions having much more similar happiness levels among the countries within than our other two. For our second question, we used heat maps to decipher whether all of the variableswe used had an equal effect on happiness and found that aside from generosity, all of the factors – GDP included – did have a similar impact on happiness levels. Our third question had us use a box graph to determine how countries with the highest GDPs compared to countries with the lowestGDPs and found that the countries with the highest GDPs had significantly higher happiness levels than the lowest-GDP countries. Questions four and five were aimed at determining what portion of high-GDP countries had low happiness levels and inversely what portion of low-GDP countries had high happiness levels. We found that that few countries with high GDPs were unhappy and similarly, few countries with low GDPs were happy. Our data essentially shows that on a nation-wide level, money can buy happiness."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
