--- a/happiness_report_analysis.ipynb
+++ b/happiness_report_analysis.ipynb
@@ -3395,16 +3395,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "            df     sum_sq   mean_sq         F        PR(>F)\n",
-      "Region     4.0  32.062949  8.015737  15.76341  2.095752e-09\n",
-      "Residual  75.0  38.137705  0.508503       NaN           NaN\n"
+      "            df     sum_sq   mean_sq          F        PR(>F)\n",
+      "Region     4.0  23.487180  5.871795  16.162613  1.379089e-09\n",
+      "Residual  75.0  27.247118  0.363295        NaN           NaN\n"
      ]
     },
     {
@@ -3510,7 +3510,7 @@
        "Central and Eastern Europe                      1.000000  "
       ]
      },
-     "execution_count": 63,
+     "execution_count": 66,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -3519,11 +3519,18 @@
     "# Posthocs GDP\n",
     "region_df_2020.columns=['Country', 'Region', 'Happiness', 'GDP', 'SSupport',\n",
     "       'Health', 'Freedom', 'Generosity']\n",
-    "lm = sfa.ols('Happiness ~ Region',data=region_df_2020).fit()\n",
+    "lm = sfa.ols('GDP ~ Region',data=region_df_2020).fit()\n",
     "anova = sa.stats.anova_lm(lm)\n",
     "print(anova)\n",
     "sp.posthoc_ttest(region_df_2020, val_col='GDP', group_col='Region', p_adjust='holm')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
