--- a/happiness_report_analysis.ipynb
+++ b/happiness_report_analysis.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "*Background: The happiness score ranking use data from theGallup World Poll. The scores are based on answers to different factors including GDP, freedom, family, social support, and others. There are over 150 countries in this dataset, ranging from 2015 to 2020. For our analysis, we use the year 2020.*\n",
     "\n",
-    "source: https://www.kaggle.com/mathurinache/world-happiness-report?select=2015.csv"
+    "source: https://www.kaggle.com/mathurinache/world-happiness-report?select=2020.csv"
    ]
   },
   {
@@ -2961,7 +2961,7 @@
     "\n",
     "Our other t-test is between Middle East and North Africa versus Central and Eastern Europe. According to the data, the 17 countries in Middle East and North Africa (M = 9.714, SD =0.927) are not demonstrating significantly different happiness scores, t(40) = 1.0712, p = 0.292 when compared to the 17 countries in Central and Eastern Europe (M = 9.998, SD = 0.397).\n",
     "\n",
-    "A one-way ANOVA was conducted to compare GDP Per Capita in Western Europe, Latin America and Caribbean, Middle East and North Africa, Central and Eastern Europe, and North America and ANZ. We found a significant difference in mean GDP (F(4,86)=15.763, p < 0.001) between the regions."
+    "A one-way ANOVA was conducted to compare GDP Per Capita in Western Europe, Latin America and Caribbean, Middle East and North Africa, Central and Eastern Europe, and North America and ANZ. We found a significant difference in mean GDP (F(4,86)=15.763, p < 0.001) between the regions. While ANOVA tests answer whether all group means are the same, post hoc test was carried out to find out where the differences are. Here we used t-tests with an adjustment to account for multiple testing, which is available in the package * scikit_posthocs*. As shown in the table of p values below, there are group differences where the p value is less than 0.05."
    ]
   },
   {
